<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <version>${revision}</version>
    <artifactId>statusplattform</artifactId>
    <groupId>no.nav</groupId>

    <name>statusplattform</name>
    <packaging>pom</packaging>

    <modules>
        <module>core</module>
        <module>infrastructure</module>
        <module>api</module>
        <module>server</module>
        <module>jobs</module>
        <module>config</module>
    </modules>

    <properties>
        <maven.compiler.target>21</maven.compiler.target>
        <maven.compiler.source>21</maven.compiler.source>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <revision>0.1-SNAPSHOT</revision>
    </properties>
</project>
